# docs/swagger.json
@@ -92,6 +92,41 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Creates a new message.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create new message",
+                "parameters": [
+                    {
+                        "description": "Message",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/message.NewMessageRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Message",
+                        "schema": {
+                            "$ref": "#/definitions/message.MessageResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Error response",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/api/auth/user/ping": {
@@ -838,6 +873,33 @@
                     "items": {
                         "$ref": "#/definitions/models.Message"
                     }
+                }
+            }
+        },
+        "message.MessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "$ref": "#/definitions/models.Message"
+                }
+            }
+        },
+        "message.NewMessageRequest": {
+            "type": "object",
+            "required": [
+                "chatId",
+                "message",
+                "time"
+            ],
+            "properties": {
+                "chatId": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "time": {
+                    "type": "integer"
                 }
             }
         },
